# MDANSE

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  AUTHORS  CHANGELOG  CITATION  MANIFEST.in  README.md  bump_version.sh  generate_file_headers.py  requirements.txt  setup.py  template_dtsf.py
MDANSE/: MANIFEST.in  README.md  __init__.py  __init__.py~  __pkginfo__.py  pyproject.toml  requirements.txt  setup.py
MDANSE/App/: HelpFormatter.py
MDANSE/App/Console/: CommandLine.py
MDANSE/App/GUI/: ConfigurationPanel.py  ControllerPanel.py  DataController.py  DataTreePanel.py  JobControllerPanel.py  LogfileFrame.py  Main.py  MainFrame.py  PluginsTreePanel.py  PreferencesSettingsDialog.py  WorkingPanel.py  __init__.py
MDANSE/Core/: ClassRegistry.py  Configurable.py  Error.py  Logger.py  MMTKDefinitions.py  Platform.py  Preferences.py  Singleton.py  UserDefinitions.py
MDANSE/Data/: ElementsDatabase.py  elements_database.csv
MDANSE/Data/Atoms/: ac  ag  ag107  ag109  al  al27  am  am243  ar  ar36  ar38  ar40  as  as75  at  au  au197  b  b10  b11  ba  ba130  ba132  ba134  ba135  ba136  ba137  ba138  be  be9  bh  bi  bi209  bk  br  br79  br81  c  c12  c13  (+401 more)
MDANSE/Data/HDF/: dcsf.h5
MDANSE/Data/Jobs_reference_data/: ac_reference.nc  apm_reference.nc  ccf_reference.nc  cn_reference.nc  comt_reference.nc  cp2k_reference.nc  dacf_reference.nc  dftb_reference.nc  disf_reference.nc  dl_poly_reference.nc  dos_reference.nc  forcite_reference.nc  gacf_reference.nc  generic_reference.nc  mt_reference.nc  op_reference.nc  pdb_reference.nc  rmsd_reference.nc  rmsf_reference.nc  rmt_reference.nc  sd_reference.nc  sffsf_reference.nc  temp_reference.nc  vacf_reference.nc
MDANSE/DistributedComputing/: MasterSlave.py  Slave.py
MDANSE/Doc/: conf_api.py  conf_help.py  simple_help.txt  theory_help.tex
MDANSE/Doc/figures/: msd_water.eps
MDANSE/Extensions/: .gitignore  __init__.py  atomic_trajectory.c  atomic_trajectory.pyx  atoms_in_shell.c  atoms_in_shell.pyx  change_coordinates.c  change_coordinates.pyx  com_trajectory.c  com_trajectory.pyx  contiguous_coordinates.c  contiguous_coordinates.pyx  distance_histogram.pyx  fast_calculation.pyx  fold_coordinates.c  fold_coordinates.pyx  mic_fast_calc.pyx  mt_fast_calc.pyx  qhull.pyx  sas_fast_calc.pyx  sd_fast_calc.pyx  setup.py  van_hove.pyx
MDANSE/Extensions/MDANSE_Extensions.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
MDANSE/Extensions/xtc/: trr.pyx  xtc.pyx
MDANSE/Framework/: AtomSelectionParser.py  AtomTransmutationParser.py  Configurable.py  MMTKDefinitions.py  Projector.py  Status.py  UserDefinable.py  UserDefinitionStore.py  UserDefinitions.py  UserDefinitionsStore.py  __init__.py
MDANSE/Framework/Configurables/: Configurable.py  Configurators.py  UserDefinable.py
MDANSE/Framework/Configurators/: AtomSelectionConfigurator.py  AtomTransmutationConfigurator.py  AtomsListConfigurator.py  AxisSelectionConfigurator.py  BasisSelectionConfigurator.py  BooleanConfigurator.py  ComplexNumberConfigurator.py  ConfiguratorsDict.py  FloatConfigurator.py  FramesConfigurator.py  GroupingLevelConfigurator.py  IConfigurator.py  InputDirectoryConfigurator.py  InputFileConfigurator.py  InstrumentResolutionConfigurator.py  IntegerConfigurator.py  InterpolationOrderConfigurator.py  MMTKTrajectoryConfigurator.py  McStasInstrumentConfigurator.py  McStasOptionsConfigurator.py  McStasParametersConfigurator.py  MultipleChoicesConfigurator.py  NetCDFInputFileConfigurator.py  OutputDirectoryConfigurator.py  OutputFilesConfigurator.py  PartialChargeConfigurator.py  ProjectionConfigurator.py  PythonObjectConfigurator.py  PythonScriptConfigurator.py  QVectorsConfigurator.py  RangeConfigurator.py  RunningModeConfigurator.py  SingleChoiceConfigurator.py  StringConfigurator.py  TrajectoryVariableConfigurator.py  VectorConfigurator.py  WeightsConfigurator.py  __init__.py
MDANSE/Framework/Formats/: ASCIIFormat.py  IFormat.py  NetCDFFormat.py  SVGFormat.py  __init__.py
MDANSE/Framework/Handlers/: ColorizingStreamHandler.py  ConsoleHandler.py  DialogHandler.py  IHandler.py  LogfileHandler.py  __init__.py
MDANSE/Framework/IO/: Formats.py  InputData.py  OutputVariables.py
MDANSE/Framework/InputData/: EmptyData.py  IInputData.py  InputFileData.py  MMTKTrajectoryInputData.py  MVITraceInputData.py  NetCDFInputData.py  PeriodicTableInputData.py  __init__.py
MDANSE/Framework/InstrumentResolutions/: GaussianResolution.py  IInstrumentResolution.py  IdealResolution.py  LorentzianResolution.py  PseudoVoigtResolution.py  SquareResolution.py  TriangularResolution.py  __init__.py
MDANSE/Framework/Jobs/: AngularCorrelation.py  AreaPerMolecule.py  BoxTranslatedTrajectory.py  CHARMM.py  Castep.py  CenterOfMassesTrajectory.py  Configurators.py  CoordinationNumber.py  CroppedTrajectory.py  CurrentCorrelationFunction.py  DCDConverter.py  DFTB.py  DL_POLY.py  DMol.py  Density.py  DensityOfStates.py  DensityProfile.py  DipoleAutoCorrelationFunction.py  Discover.py  DistanceHistogram.py  DynamicCoherentStructureFactor.py  DynamicIncoherentStructureFactor.py  Eccentricity.py  (+36 more)
MDANSE/GUI/: Apps.py  ControllerPanel.py  DataController.py  DataTreePanel.py  ElementsDatabaseEditor.py  JobControllerPanel.py  JobTemplateEditor.py  MainFrame.py  PeriodicTableViewer.py  PluginsTreePanel.py  PreferencesSettings.py  PreferencesSettingsDialog.py  RegistryViewer.py  UserDefinitionViewer.py  WorkingPanel.py  __init__.py
MDANSE/Logging/: Formatters.py  Logger.py
MDANSE/MDANSE.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
MDANSE/Mathematics/: Geometry.py  Graph.py  Signal.py
MDANSE/MolecularDynamics/: Analysis.py  Trajectory.py
MDANSE/Scripts/: mdanse  mdanse_job
MDANSE/Src/: __init__.py  __pkginfo__.py  util.py
MDANSE/Tests/: .gitignore
MDANSE_GUI/: AUTHORS  MANIFEST.in  README.md  pyproject.toml  rebuild.sh  requirements.txt  setup.py
MDANSE_GUI/MDANSE_GUI.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
MDANSE_GUI/Scripts/: mdanse_elements_database  mdanse_gui  mdanse_periodic_table  mdanse_ud_editor  mdanse_units_editor
MDANSE_GUI/Src/: __init__.py  __pkginfo__.py
(+2747 files in other folders)
