[build-system]
requires = ["setuptools", "cython", "numpy", "pip", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MDANSE"
version = "2.0.0"
description = 'MDANSE Core package - Molecular Dynamics trajectory handling and analysis code'
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["molecular dynamics", "science", "simulation", "analysis"]
authors = [
  {name = "Maciej Bartkowiak", email = "maciej.bartkowiak@stfc.ac.uk"}
]
maintainers = [
  {name = "Sanghamitra Mukhopadhyay", email = "sanghamitra.mukhopadhyay@stfc.ac.uk"}
]
classifiers = [
        'Development Status :: 4 - Beta',

        'Intended Audience :: Science/Research',
        'Topic :: Software Development :: Build Tools',

        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3 :: Only',
        'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
        'Operating System :: OS Independent'
]

dependencies = [
  "numpy",
  "scipy",
  "h5py",
  "icecream",
  "ase"
]

# dynamic = ["version", "description"]

[project.urls]
homepage = "https://www.isis.stfc.ac.uk/Pages/MDANSEproject.aspx"
documentation = "https://mdanse.readthedocs.io/en/latest/"
repository = "https://github.com/ISISNeutronMuon/MDANSE"

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
mdanse = "MDANSE.Scripts.mdanse:main"
mdanse_job = "MDANSE.Scripts.mdanse_job:main"

# [tool.setuptools.packages.find]
# where = ["src"]
