[build-system]
requires = ["setuptools", "numpy", "pip", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MDANSE_GUI"
version = "0.1.0"
description = 'MDANSE GUI package - the graphical interface for MDANSE'
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["molecular dynamics", "science", "simulation", "analysis"]
authors = [
  {name = "Maciej Bartkowiak", email = "maciej.bartkowiak@stfc.ac.uk"}
]
maintainers = [
  {name = "Sanghamitra Mukhopadhyay", email = "sanghamitra.mukhopadhyay@stfc.ac.uk"}
]
classifiers = [
        'Development Status :: 3 - Alpha',

        'Intended Audience :: Science/Research',
        'Topic :: Software Development :: Build Tools',

        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3 :: Only',
        'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
        'Operating System :: OS Independent'
]

dependencies = [
  "qtpy",
  "vtk",
  "MDANSE",
  "PyYAML",
  "PyQt6"
]

# dynamic = ["version", "description"]

[project.urls]
homepage = "https://www.isis.stfc.ac.uk/Pages/MDANSEproject.aspx"
documentation = "https://mdanse.readthedocs.io/en/latest/"
repository = "https://github.com/ISISNeutronMuon/MDANSE"

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
mdanse_elements_database = "MDANSE_GUI.Scripts.mdanse_elements_database:main"
mdanse_gui = "MDANSE_GUI.Scripts.mdanse_gui:main"
mdanse_periodic_table = "MDANSE_GUI.Scripts.mdanse_periodic_table:main"
mdanse_plotter = "MDANSE_GUI.Scripts.mdanse_plotter:main"
mdanse_ud_editor = "MDANSE_GUI.Scripts.mdanse_ud_editor:main"
mdanse_units_editor = "MDANSE_GUI.Scripts.mdanse_units_editor:main"

# [tool.setuptools.packages.find]
# where = ["src"]
